# MicVST

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: build.yml  release.yml
src/: Main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  GraphConnections.cpp  GraphConnections.h  Metering.cpp  Metering.h  MicVSTDeviceManager.h  PluginChain.cpp  PluginChain.h
src/net/: UpdateChecker.h
src/state/: AutostartRegistry.cpp  AutostartRegistry.h  Persistence.cpp  Persistence.h
src/ui/: DevicePanel.cpp  DevicePanel.h  LevelMeterComponent.cpp  LevelMeterComponent.h  MainComponent.cpp  MainComponent.h  PluginListView.cpp  PluginListView.h  TrayIcon.cpp  TrayIcon.h
tests/: TestMain.cpp
